<?xml version="1.0"?>
<package format="2">
  <name>my_string_publisher</name>
  <version>0.0.1</version>
  <description>String Publisher Node</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>

